--- a/src/main/resources/assets/dynamicfullbright/lang/en_us.json
+++ b/src/main/resources/assets/dynamicfullbright/lang/en_us.json
@@ -16,5 +16,8 @@
     "entry.dynamicfullbright.entity.max": "Maximum Entity Light",
 
     "tooltip.dynamicfullbright.world.scaling": "When enabled, light levels will be scaled to be between the specified minimum and maximum range.\nWhen disabled, light levels outside the range will be clamped to it.",
-    "tooltip.dynamicfullbright.entity.separate": "When enabled, entity light levels will be adjusted independently of the world's light.\nThe entity light range is ignored when this is disabled."
+    "tooltip.dynamicfullbright.entity.separate": "When enabled, entity light levels will be adjusted independently of the world's light.\nThe entity light range is ignored when this is disabled.",
+
+    "message.dynamicfullbright.on": "Dynamic Fullbright is on",
+    "message.dynamicfullbright.off": "Dynamic Fullbright is off"
 }
